fix(frontend): don't stretch public cover when hiding the sidebar

--- a/frontend/src/css/PublicProfile.styl
+++ b/frontend/src/css/PublicProfile.styl
@@ -35,7 +35,7 @@
       width 100%
       height 100%
       object-position 50% 50%
-      object-fit fill
+      object-fit cover
   &__mainBar
     height headerHeight
     padding-left pageSpacing
